[gd_scene load_steps=9 format=3 uid="uid://dvav3go83v4cn"]

[ext_resource type="Script" uid="uid://cxy08k0glbqp6" path="res://Scripts/Lever.gd" id="1_4eppj"]
[ext_resource type="Texture2D" uid="uid://bmqa78gctx3ec" path="res://Textures/worldSprites.png" id="2_d50mk"]
[ext_resource type="Texture2D" uid="uid://cl0cssmtjtev5" path="res://Textures/light.png" id="3_1mta4"]
[ext_resource type="PackedScene" uid="uid://d1f5afm1uun61" path="res://Prefabs/corrode.tscn" id="4_ohqes"]
[ext_resource type="AudioStream" uid="uid://bv1impex14kuc" path="res://Audio/Click.mp3" id="6_mub81"]
[ext_resource type="AudioStream" uid="uid://rfve3h0ctrn6" path="res://Audio/glitter-sound-effect-for-music-or-editing.wav" id="7_ealv5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lwrj8"]
size = Vector2(96, 96)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_s4bo8"]
polygon = PackedVector2Array(-42, 36, 42, 36, 42, 39, 45, 39, 45, 45, 42, 45, 42, 48, -42, 48, -42, 45, -45, 45, -45, 39, -42, 39)

[node name="Lever" type="Area2D"]
texture_filter = 1
collision_layer = 3
collision_mask = 3
script = ExtResource("1_4eppj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_lwrj8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_d50mk")
region_enabled = true
region_rect = Rect2(166, 1, 32, 32)

[node name="red_light" type="PointLight2D" parent="."]
position = Vector2(-36, -3)
color = Color(1, 0, 0, 1)
energy = 0.25
shadow_enabled = true
texture = ExtResource("3_1mta4")
texture_scale = 0.15

[node name="red_light2" type="PointLight2D" parent="."]
light_mask = 2
position = Vector2(-36, -3)
color = Color(1, 0, 0, 1)
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_1mta4")
texture_scale = 0.25

[node name="green_light" type="PointLight2D" parent="."]
visible = false
position = Vector2(36, -3)
color = Color(0, 1, 0, 1)
energy = 0.25
shadow_enabled = true
texture = ExtResource("3_1mta4")
texture_scale = 0.15

[node name="green_light2" type="PointLight2D" parent="."]
visible = false
light_mask = 2
position = Vector2(36, -3)
color = Color(0, 1, 0, 1)
range_item_cull_mask = 2
shadow_enabled = true
shadow_item_cull_mask = 2
texture = ExtResource("3_1mta4")
texture_scale = 0.25

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_s4bo8")

[node name="Corrode" parent="." instance=ExtResource("4_ohqes")]
position = Vector2(2, 36)

[node name="Corrode2" parent="." instance=ExtResource("4_ohqes")]
position = Vector2(-14, 12)

[node name="Corrode3" parent="." instance=ExtResource("4_ohqes")]
position = Vector2(-37, 4)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mub81")

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ealv5")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
